<resources>
    <string name="facebook_app_id">262826908481638</string>
    <string name="fb_login_protocol_scheme">fb262826908481638</string>
    <integer name="com_vk_sdk_AppId">7655388</integer>

    <string name="app_name" translatable="false">Losties</string>
    <string name="i_understand">I understand</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="email">Почта</string>
    <string name="address">Адрес</string>
    <string name="type_and_sex">Тип и пол</string>
    <string name="cat">Кот</string>
    <string name="catty">Кошка</string>
    <string name="dog">Пес</string>
    <string name="doggy">Собака</string>
    <string name="other">Другие</string>
    <string name="phone">Телефон</string>
    <string name="network">Соц сеть (VK, Telegram, ...)</string>
    <string name="input_error">Ошибка ввода</string>
    <string name="list">Список</string>
    <string name="feed">Лента</string>
    <string name="profile">Профиль</string>
    <string name="why_should_i_register">Why should I register?</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="vk" translatable="false">VK</string>
    <string name="publish">Опубликовать</string>
    <string name="lost">Потерял</string>
    <string name="taken_take_home">Нашел, беру себе</string>
    <string name="seems_home">Вроде домашнее</string>
    <string name="read">Полистать</string>
    <string name="losties">Потеряшки</string>
    <string name="taken_animals">Подобранные</string>
    <string name="lost_animal">Потерял свою лапу(</string>
    <string name="permission">Разрешение</string>
    <string name="need_location_permissions">Следующие разрешения необходимы для определения адреса</string>
    <string name="send">Отправить</string>
    <string name="choose_photo_please">Пожалуйста, выберите фото</string>
    <string name="required_for_animal_identification">Это необходимо чтобы распознать животное</string>
    <string name="please_specify_address">Пожалуйста, укажите аддресс</string>
    <string name="animal_name">Кличка животного</string>
    <string name="breed">Порода</string>
    <string name="user_name">Как к вам обращаться</string>
    <string name="load_photo">Загрузить фото</string>
    <string name="error_check_inet_connection">Проверте наличие интернет соединения</string>
    <string name="seen_at_street">Бродит по улицам</string>
    <string name="taken_home">Взят домой</string>
    <string name="lostie">Потеряшка</string>
    <string name="next">Дальше</string>
    <string name="watch">Просмотреть</string>
    <string name="watch_animals">Лайкать животных</string>
    <string name="watch_cats">Лайкать котов</string>
    <string name="watch_dogs">Лайкать собак</string>
    <string name="why_should_i_register_description">Регистрация необхожима, чтобы привязать поданные вами объявления. Не является обязательной.</string>
    <string name="error_facebook_user_get">Ошибка регистрации facebook</string>
    <string name="publish_on_social_networks">Опубликовать в соц. сетях</string>
</resources>
