<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clRootReadPublication"
    style="@style/registerParentRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@null">

    <TextView
        android:id="@+id/tvTitleRead"
        style="@style/UserActionTitle"
        android:text="@string/read" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clReadLostAnimal"
        style="@style/registerParentRoot"
        android:layout_height="@dimen/space55"
        android:layout_marginTop="@dimen/space16"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRead">

        <TextView
            android:id="@+id/tvReadLostAnimal"
            style="@style/UserActionText"
            android:text="@string/losties"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clReadTakenAnimal"
        style="@style/registerParentRoot"
        android:layout_height="@dimen/space55"
        android:layout_marginTop="@dimen/space16"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/clReadLostAnimal">

        <TextView
            android:id="@+id/tvReadTakenAnimal"
            style="@style/UserActionText"
            android:text="@string/taken_animals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clReadSeenAnimal"
        style="@style/registerParentRoot"
        android:layout_height="@dimen/space55"
        android:layout_marginTop="@dimen/space16"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/clReadTakenAnimal">


        <TextView
            android:id="@+id/tvReadSeemsHomeAnimal"
            style="@style/UserActionText"
            android:text="@string/seems_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space12"
        app:layout_constraintTop_toBottomOf="@id/clReadSeenAnimal" />

</androidx.constraintlayout.widget.ConstraintLayout>
